--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "async": "^1.4.2",
     "debug": "^2.2.0",
     "iterate-object": "^1.1.0",
+    "pex-geom": "^1.0.0-beta.2",
     "pex-io": "pex-gl/pex-io",
     "simple-loop": "0.0.4"
   },
