--- a/example/all/package.json
+++ b/example/all/package.json
@@ -4,7 +4,8 @@
   "description": "glTF loader for pex tests",
   "main": "main.js",
   "scripts": {
-    "build": "browserify main.js -o main.web.js --ignore plask -g glslify-promise/transform -g glslify-sync/transform"
+    "build": "browserify main.js -o main.web.js --ignore plask -g glslify-promise/transform -g glslify-sync/transform",
+    "watch": "watchify main.js -o main.web.js --ignore plask -g glslify-promise/transform -g glslify-sync/transform"
   },
   "author": "Marcin Ignac <marcin.ignac@gmail.com> (http://marcinignac.com/)",
   "license": "MIT",
@@ -13,20 +14,20 @@
     "browserify": "^13.0.0",
     "debug": "^2.2.0",
     "glslify-promise": "^1.0.1",
-    "glslify-sync": "^1.1.1",
+    "glslify-sync": "^2.0.0",
     "is-browser": "^2.0.1",
     "iterate-object": "^1.1.0",
     "normals": "^1.0.1",
     "pex-cam": "^1.0.0-beta.1",
     "pex-color": "^1.1.1",
-    "pex-context": "^1.0.0-beta.3",
+    "pex-context": "^1.1.0",
     "pex-draw": "^1.0.0-beta.1",
     "pex-geom": "^1.0.0-beta.2",
     "pex-gui": "^1.0.0-beta.1",
-    "pex-io": "^1.0.0-beta.1",
-    "pex-math": "^1.0.0-beta.1",
+    "pex-io": "^1.1.0",
+    "pex-math": "^1.0.0",
     "pex-random": "^1.0.0-beta.1",
-    "pex-sys": "^1.0.0-beta.8",
+    "pex-sys": "^1.1.1",
     "primitive-cube": "^1.0.2"
   }
 }
