--- a/example/basic/package.json
+++ b/example/basic/package.json
@@ -10,20 +10,19 @@
   "license": "MIT",
   "dependencies": {
     "debug": "^2.2.0",
-    "is-browser": "^2.0.1",
-    "iterate-object": "^1.1.0",
     "glslify-promise": "^1.0.1",
     "is-browser": "^2.0.1",
+    "iterate-object": "^1.1.0",
     "normals": "^1.0.1",
-    "pex-cam": "^1.0.0-beta.1",
+    "pex-cam": "^1.0.0-beta.2",
     "pex-color": "^1.1.1",
-    "pex-context": "^1.0.0-beta.3",
-    "pex-draw": "^1.0.0-beta.1",
-    "pex-geom": "^1.0.0-beta.1",
-    "pex-gui": "^1.0.0-beta.1",
-    "pex-io": "^1.0.0-beta.1",
-    "pex-math": "^1.0.0-beta.1",
-    "pex-random": "^1.0.0-beta.1",
-    "pex-sys": "^1.0.0-beta.7"
+    "pex-context": "^1.1.0",
+    "pex-draw": "^1.0.0-beta.2",
+    "pex-geom": "^0.14.0",
+    "pex-gui": "^1.2.0",
+    "pex-io": "^1.1.0",
+    "pex-math": "^1.0.0",
+    "pex-random": "^1.0.0",
+    "pex-sys": "^1.1.1"
   }
 }
