--- a/example/all/package.json
+++ b/example/all/package.json
@@ -13,20 +13,21 @@
     "async": "^1.5.2",
     "browserify": "^13.0.0",
     "debug": "^2.2.0",
-    "glslify-promise": "^1.0.1",
+    "glslify-promise": "^1.0.2",
     "glslify-sync": "^2.0.0",
     "is-browser": "^2.0.1",
     "iterate-object": "^1.1.0",
     "normals": "^1.0.1",
     "pex-cam": "^1.0.0-beta.1",
     "pex-color": "^1.1.1",
-    "pex-context": "^1.1.0",
+    "pex-context": "^1.1.1",
     "pex-draw": "^1.0.0-beta.1",
     "pex-geom": "^1.0.0-beta.2",
-    "pex-gui": "^1.0.0-beta.1",
+    "pex-gui": "^1.2.0",
     "pex-io": "^1.1.0",
     "pex-math": "^1.0.0",
     "pex-random": "^1.0.0-beta.1",
+    "pex-renderer": "^0.1.4",
     "pex-sys": "^1.1.1",
     "primitive-cube": "^1.0.2"
   }
