--- a/example/basic/package.json
+++ b/example/basic/package.json
@@ -4,7 +4,7 @@
   "description": "glTF loader for pex tests",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "browserify main.js -o main.web.js --ignore plask -g glslify-promise/transform -g glslify-sync/transform"
   },
   "author": "Marcin Ignac <marcin.ignac@gmail.com> (http://marcinignac.com/)",
   "license": "MIT",
