--- a/example/basic/package.json
+++ b/example/basic/package.json
@@ -4,11 +4,12 @@
   "description": "glTF loader for pex tests",
   "main": "main.js",
   "scripts": {
-    "build": "browserify main.js -o main.web.js --ignore plask -g glslify-promise/transform -g glslify-sync/transform"
+    "build": "browserify main.js -o main.web.js --ignore plask -g glslify-promise/transform"
   },
   "author": "Marcin Ignac <marcin.ignac@gmail.com> (http://marcinignac.com/)",
   "license": "MIT",
   "dependencies": {
+    "browserify": "^13.0.0",
     "debug": "^2.2.0",
     "glslify-promise": "^1.0.1",
     "is-browser": "^2.0.1",
@@ -16,7 +17,7 @@
     "normals": "^1.0.1",
     "pex-cam": "^1.0.0-beta.2",
     "pex-color": "^1.1.1",
-    "pex-context": "^1.1.0",
+    "pex-context": "^1.1.1",
     "pex-draw": "^1.0.0-beta.2",
     "pex-geom": "^0.14.0",
     "pex-gui": "^1.2.0",
