--- a/example/basic/package.json
+++ b/example/basic/package.json
@@ -19,7 +19,7 @@
     "pex-color": "^1.1.1",
     "pex-context": "^1.1.1",
     "pex-draw": "^1.0.0-beta.2",
-    "pex-geom": "^0.14.0",
+    "pex-geom": "1.0.0-beta.2",
     "pex-gui": "^1.2.0",
     "pex-io": "^1.1.0",
     "pex-math": "^1.0.0",
