--- a/example/basic/package.json
+++ b/example/basic/package.json
@@ -1,29 +1,25 @@
 {
-  "name": "pex-gltf-test",
-  "version": "0.0.1",
-  "description": "glTF loader for pex tests",
-  "main": "main.js",
+  "name": "basic",
+  "version": "1.0.0",
+  "description": "Basic GLTF loader example",
+  "main": "index.js",
+  "dependencies": {
+    "browserify": "^13.1.1",
+    "budo": "^9.2.2",
+    "debug": "^2.2.0",
+    "gl-mat4": "^1.1.4",
+    "glsl-inverse": "^1.0.0",
+    "glsl-transpose": "^1.0.0",
+    "glslify": "^6.0.1",
+    "iterate-object": "^1.1.0",
+    "pex-gl": "^0.2.1",
+    "pex-io": "^1.3.1",
+    "regl": "^1.3.0"
+  },
+  "devDependencies": {},
   "scripts": {
-    "build": "browserify main.js -o main.web.js --ignore plask -g glslify-promise/transform"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Marcin Ignac <marcin.ignac@gmail.com> (http://marcinignac.com/)",
-  "license": "MIT",
-  "dependencies": {
-    "browserify": "^13.0.0",
-    "debug": "^2.2.0",
-    "glslify-promise": "^1.0.1",
-    "is-browser": "^2.0.1",
-    "iterate-object": "^1.1.0",
-    "normals": "^1.0.1",
-    "pex-cam": "^1.0.0-beta.2",
-    "pex-color": "^1.1.1",
-    "pex-context": "^1.1.1",
-    "pex-draw": "^1.0.0-beta.2",
-    "pex-geom": "1.0.0-beta.2",
-    "pex-gui": "^1.2.0",
-    "pex-io": "^1.1.0",
-    "pex-math": "^1.0.0",
-    "pex-random": "^1.0.0",
-    "pex-sys": "^1.1.1"
-  }
+  "license": "MIT"
 }
