--- a/example/basic/package.json
+++ b/example/basic/package.json
@@ -6,11 +6,12 @@
   "dependencies": {
     "browserify": "^13.1.1",
     "budo": "^9.2.2",
-    "debug": "^2.2.0",
+    "debug": "^2.3.3",
     "gl-mat4": "^1.1.4",
     "glsl-inverse": "^1.0.0",
     "glsl-transpose": "^1.0.0",
     "glslify": "^6.0.1",
+    "is-browser": "^2.0.1",
     "iterate-object": "^1.1.0",
     "pex-gl": "^0.2.1",
     "pex-io": "^1.3.1",
