--- a/example/basic/package.json
+++ b/example/basic/package.json
@@ -7,6 +7,7 @@
     "browserify": "^13.1.1",
     "budo": "^9.2.2",
     "debug": "^2.3.3",
+    "gl-constants": "^1.0.0",
     "gl-mat4": "^1.1.4",
     "glsl-inverse": "^1.0.0",
     "glsl-transpose": "^1.0.0",
